build confidence interval dictionary works

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -16,16 +16,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.76405235]\n",
-      "tf.Tensor([1.5110626], shape=(1,), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from typing import Tuple, Optional, Union\n",
@@ -41,43 +32,27 @@
     "from ops import ReLU, MeanSquaredError, BinaryCrossEntropy, Sigmoid, SigmoidCrossEntropyWithLogits\n",
     "\n",
     "np.random.seed(0)\n",
-    "tf.random.set_seed(0)\n",
-    "\n",
-    "print(np.random.normal(size=(1,)))\n",
-    "print(tf.random.normal(shape=(1,)))"
+    "tf.random.set_seed(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "7/7 [==============================] - 0s 20ms/step - loss: 1.3944 - val_loss: 1.6465\n",
-      "Epoch 2/5\n",
-      "7/7 [==============================] - 0s 5ms/step - loss: 1.3031 - val_loss: 1.5942\n",
-      "Epoch 3/5\n",
-      "7/7 [==============================] - 0s 5ms/step - loss: 1.2299 - val_loss: 1.5378\n",
-      "Epoch 4/5\n",
-      "7/7 [==============================] - 0s 5ms/step - loss: 1.1593 - val_loss: 1.5045\n",
-      "Epoch 5/5\n",
-      "7/7 [==============================] - 0s 5ms/step - loss: 1.1205 - val_loss: 1.4855\n",
-      "Epoch 1/5 -- Loss: 0.995 -- Validation Loss: 1.131\n",
-      "Epoch 2/5 -- Loss: 0.994 -- Validation Loss: 0.957\n",
-      "Epoch 3/5 -- Loss: 0.993 -- Validation Loss: 1.214\n",
-      "Epoch 4/5 -- Loss: 0.992 -- Validation Loss: 0.712\n",
-      "Epoch 5/5 -- Loss: 0.991 -- Validation Loss: 0.98\n",
       "['my_model', 'ref_model']\n",
       "['loss', 'val_loss']\n",
-      "[defaultdict(<class 'list'>, {'loss': [0.995088712291705, 0.9939199689831675, 0.9928225125943166, 0.9917890645891693, 0.9908133952141073], 'val_loss': [1.1308552353682026, 0.9566528119552512, 1.2139961990237655, 0.7121656233867669, 0.9798410437738047]}), {'loss': [1.3944320678710938, 1.303109884262085, 1.2298996448516846, 1.1592942476272583, 1.1205456256866455], 'val_loss': [1.646530032157898, 1.5941754579544067, 1.5377655029296875, 1.5044548511505127, 1.4854944944381714]}]\n",
+      "[defaultdict(<class 'list'>, {'loss': [0.910053327157888, 0.8711946359158919, 0.8431318467157493, 0.822631016641001, 0.8075443417596557], 'val_loss': [1.5606431968595884, 1.5527274719754993, 1.5510327354736015, 1.5963520818843078, 1.616502831991005]}), {'loss': [0.8827767372131348, 0.8751176595687866, 0.8704826235771179, 0.867555558681488, 0.863520622253418], 'val_loss': [1.3771300315856934, 1.3654534816741943, 1.365041971206665, 1.3555736541748047, 1.3463513851165771]}]\n",
+      "[0.910053327157888, 0.8711946359158919, 0.8431318467157493, 0.822631016641001, 0.8075443417596557]\n",
       "\n",
-      "defaultdict(<class 'list'>, {'loss': [0.995088712291705, 0.9939199689831675, 0.9928225125943166, 0.9917890645891693, 0.9908133952141073], 'val_loss': [1.1308552353682026, 0.9566528119552512, 1.2139961990237655, 0.7121656233867669, 0.9798410437738047]})\n",
+      "{'loss': [0.8827767372131348, 0.8751176595687866, 0.8704826235771179, 0.867555558681488, 0.863520622253418], 'val_loss': [1.3771300315856934, 1.3654534816741943, 1.365041971206665, 1.3555736541748047, 1.3463513851165771]}\n",
+      "{'loss': [0.8827767372131348, 0.8751176595687866, 0.8704826235771179, 0.867555558681488, 0.863520622253418], 'val_loss': [1.3771300315856934, 1.3654534816741943, 1.365041971206665, 1.3555736541748047, 1.3463513851165771]}\n",
       "\n",
-      "{'loss': [1.3944320678710938, 1.303109884262085, 1.2298996448516846, 1.1592942476272583, 1.1205456256866455], 'val_loss': [1.646530032157898, 1.5941754579544067, 1.5377655029296875, 1.5044548511505127, 1.4854944944381714]}\n"
+      "Building confidence interval dictionary...\n"
      ]
     }
    ],
@@ -101,7 +76,7 @@
     "\n",
     "model.compile(loss='mse', optimizer='sgd')\n",
     "\n",
-    "history = model.fit(x, y, epochs=epochs, batch_size=batch_size, validation_split=0.2, verbose=1)\n",
+    "history = model.fit(x, y, epochs=epochs, batch_size=batch_size, validation_split=0.2, verbose=0)\n",
     "\n",
     "# Build my model\n",
     "my_model = MLP(\n",
@@ -113,7 +88,7 @@
     "    l_layers=num_layers)\n",
     "\n",
     "# Train my model\n",
-    "my_history = my_model.fit(x=x, y=y, batch_size=batch_size, epochs=epochs,)\n",
+    "my_history = my_model.fit(x=x, y=y, batch_size=batch_size, epochs=epochs, verbose=0)\n",
     "\n",
     "# My multimodel history dictionary\n",
     "mmh_dict = MultiModelHistory()\n",
@@ -126,22 +101,37 @@
     "    model_history=history.history,\n",
     "    model_key='ref_model')\n",
     "\n",
+    "\n",
     "print(mmh_dict.model_keys)\n",
     "print(mmh_dict.metric_keys)\n",
     "print(mmh_dict.model_histories)\n",
+    "print(mmh_dict.model_histories[0]['loss'])\n",
+    "\n",
     "print()\n",
-    "print(mmh_dict.model_histories[0])\n",
+    "print(mmh_dict.model_histories[1])\n",
+    "print(mmh_dict.model_histories[1])\n",
+    "\n",
+    "# Build confidence interval dict\n",
     "print()\n",
-    "print(mmh_dict.model_histories[1])"
+    "print('Building confidence interval dictionary...')\n",
+    "mmh_dict.build_conf_interval_dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'dict'>, {'my_model': {'loss': (0.850911033638037, 0.050628004408447946), 'val_loss': (1.5754516636368003, 0.036486701355165074)}, 'ref_model': {'loss': (0.871890640258789, 0.009203264422113833), 'val_loss': (1.361910104751587, 0.014376445662879211)}})\n"
+     ]
+    }
+   ],
    "source": [
-    "# Confidence interval building"
+    "print(mmh_dict.conf_interval_dict)"
    ]
   },
   {
