more multimodelhistory methods and built conf interval dictionaries with both metric and model major capabilities

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -126,11 +126,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'dict'>, {'my_model': {'loss': (0.850911033638037, 0.050628004408447946), 'val_loss': (1.5754516636368003, 0.036486701355165074)}, 'ref_model': {'loss': (0.871890640258789, 0.009203264422113833), 'val_loss': (1.361910104751587, 0.014376445662879211)}})\n"
+      "defaultdict(<class 'dict'>, {'my_model': {'loss': Stats(mean=0.850911033638037, error=0.050628004408447946), 'val_loss': Stats(mean=1.5754516636368003, error=0.036486701355165074)}, 'ref_model': {'loss': Stats(mean=0.871890640258789, error=0.009203264422113833), 'val_loss': Stats(mean=1.361910104751587, error=0.014376445662879211)}})\n",
+      "defaultdict(<class 'dict'>, {'my_model': {'loss': Stats(mean=0.850911033638037, error=0.050628004408447946), 'val_loss': Stats(mean=1.5754516636368003, error=0.036486701355165074)}, 'ref_model': {'loss': Stats(mean=0.871890640258789, error=0.009203264422113833), 'val_loss': Stats(mean=1.361910104751587, error=0.014376445662879211)}})\n",
+      "False\n",
+      "\n",
+      "[{'loss': Stats(mean=0.850911033638037, error=0.050628004408447946), 'val_loss': Stats(mean=1.5754516636368003, error=0.036486701355165074)}, {'loss': Stats(mean=0.871890640258789, error=0.009203264422113833), 'val_loss': Stats(mean=1.361910104751587, error=0.014376445662879211)}]\n"
      ]
     }
    ],
    "source": [
+    "# Inspect model major confidence interval dict\n",
+    "print(mmh_dict.conf_interval_dict)\n",
+    "print(mmh_dict._conf_interval_dict_model_major)\n",
+    "print(mmh_dict.conf_interval_dict is mmh_dict._conf_interval_dict_model_major)\n",
+    "print()\n",
+    "print(mmh_dict.model_performance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'dict'>, {'loss': {'my_model': Stats(mean=0.850911033638037, error=0.050628004408447946), 'ref_model': Stats(mean=0.871890640258789, error=0.009203264422113833)}, 'val_loss': {'my_model': Stats(mean=1.5754516636368003, error=0.036486701355165074), 'ref_model': Stats(mean=1.361910104751587, error=0.014376445662879211)}})\n",
+      "\n",
+      "defaultdict(<class 'dict'>, {'my_model': {'loss': Stats(mean=0.850911033638037, error=0.050628004408447946), 'val_loss': Stats(mean=1.5754516636368003, error=0.036486701355165074)}, 'ref_model': {'loss': Stats(mean=0.871890640258789, error=0.009203264422113833), 'val_loss': Stats(mean=1.361910104751587, error=0.014376445662879211)}})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reformat to metric major\n",
+    "mmh_dict.set_key_to_metric_major()\n",
+    "print(mmh_dict.conf_interval_dict)\n",
+    "\n",
+    "mmh_dict.set_key_to_model_major()\n",
+    "print()\n",
     "print(mmh_dict.conf_interval_dict)"
    ]
   },
