nan can occur for validation set too small due to batching... added arg to inspect model output and working on n-kfold train val plot

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -119,6 +119,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try reshaping the metric list to "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
