classifier fails for breast cancer set...why?? it works with random set... are the x values not scaled for breast cancer??

--- a/tex/report.tex
+++ b/tex/report.tex
@@ -45,7 +45,7 @@
 \title{
 	The Multilayer Perceptron \\ 
 	\large Mathematical Concepts, a Python3 Implementation, \\ and Selected Applications}
-\date{2022 January 14}
+\date{2022 January}
 \author{Jared Frazier\thanks{Department of Computer Science (2021-2022),
 Middle Tennessee State University.} \thanks{Department of Chemistry (2018-2021),
 Middle Tennessee State University.} \thanks{Not endorsed by or affiliated with any of the 
@@ -814,8 +814,8 @@ Binary with 30 features etc. Use stack exchange notes on $y \in ...$
 
 The architecture of the network is as follows: a single hidden layer with ReLU
 activation function and 32 neurons; an output layer with sigmoid activation function
-and 1 neuron; the BCE cost function; batch size of 32; trained for 8 epochs;
-update parameters with stochastic gradient descent; and learning rate of 0.001.
+and 1 neuron; the BCE cost function; batch size of 32; trained for 5 epochs;
+update parameters with stochastic gradient descent; and learning rate of 0.01.
 
 Note that my implementation is not the optimized implementation used by
 TensorFlow, see \cite{Khan2020} and the binary cross entropy TensorFlow backend
