added original breast cancer link in report.

--- a/tex/report.tex
+++ b/tex/report.tex
@@ -833,7 +833,8 @@ Thus, the partial derivative of BCE for a single sample is shown below:
 \subsubsection{Breast Cancer Dataset}
 
 The breast cancer dataset is available through \codeword{Scikit-Learn}, and
-the original data is available from
+the original data is available from the
+\href{https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic)}{UCI Machine Learning repository}.
 
 \begin{align}
 	X          & \in \mathbb{R}^{569 \times 30} \\
