better bar charts for results

--- a/tex/report.tex
+++ b/tex/report.tex
@@ -875,13 +875,15 @@ regression and classification tasks is shown below.
 \afterpage
 
 \begin{figure}[h]
-	\includegraphics[scale=0.35]{one_layer_regressor_bar_chart.jpg}
-	\caption{Performance of model on diabetes regression task.}
+	\includegraphics[scale=0.35]{one_layer_regressor_bar_chart_2.jpg}
+	\caption{Performance (mean squared error) comparison of single hidden 
+	layer neural networks on diabetes regression task.}
 \end{figure}
 
 \begin{figure}[h]
-	\includegraphics[scale=0.35]{one_layer_classifier_bar_chart.jpg}
-	\caption{Performance of model on breast cancer classification task.}
+	\includegraphics[scale=0.35]{one_layer_classifier_bar_chart_2.jpg}
+	\caption{Performance (binary cross entropy) comparison of single hidden layer 
+	neural networks on breast cancer classification task.}
 \end{figure}
 
 \clearpage
